2005-01-13  Michael Natterer  <mitch@gimp.org>

	Allow to easily open brushes and patterns as images.
	Fixes bug #163059.

	* app/actions/brushes-actions.c
	* app/actions/patterns-actions.c: added "brushes-open-as-image"
	and "patterns-open-as-image" actions.

	* app/actions/data-commands.[ch]: added
	data_open_as_image_cmd_callback() which tries to load
	data->filename as image.

	* app/widgets/gimphelp-ids.h: added help IDs for the new actions.

	* app/widgets/gimpdatafactoryview.c: added buttons.

	* menus/brushes-menu.xml
	* menus/patterns-menu.xml: added them to the menus.

2005-01-13  Michael Natterer  <mitch@gimp.org>

	Splitting GimpItem::convert() into two virtual functions was
	apparently buggy over-engineering. Reverted that stuff and
	implement item conversion much simpler:

	* app/core/gimpitem.[ch]: have a single virtual function,
	GimpItem::convert(), which takes a newly duplicated item and the
	destination image.

	(gimp_item_convert): simply call GimpItem::convert() on the result
	of gimp_item_duplicate().

	(gimp_item_real_convert): set the item's new image.

	* app/core/gimplayer.c (gimp_layer_convert)
	* app/vectors/gimpvectors.c (gimp_vectors_convert): changed
	accordingly and chain up after, not before doing our own stuff
	so the old image is still available as item->image for stuff
	like colormap conversion. Fixes bug #163879.

2005-01-13  Michael Natterer  <mitch@gimp.org>

	Made the file open and save dialogs use the last used folder
	instead of defaulting to current directory. Fixes bug #162385.

	* app/widgets/gimpfiledialog.[ch] (gimp_file_dialog_set_uri):
	removed this function because it had no functionality except
	creating usability problems.

	* app/actions/file-commands.c: use gtk_file_chooser_set_uri()
	instead but *only* if we already have an uri from an alread open
	image or the document hinstory.

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_image): set
	the file chooser's uri only if we have an uri from the image